--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "cometr"]
+	path = cometr
+	url = https://github.com/comet-ml/cometr
+	shallow = true
+	registered = true
